# supervisor_node

./: .gitignore  CMakeLists.txt  README.md  package.xml
docs/: Hakertz_RTES_Presentation.pptx
launch/: demo.py
src/: external_state_selector_node.cpp  failure_simulator.cpp  pub_sub_simulator_node.cpp  supervisor_node.cpp
src/external_state_selector_node/: external_state_selector_node.cpp
src/external_state_selector_node/header/: header.h
src/external_state_selector_node/methods/: methods.cpp
src/external_state_selector_node/states/: active.h  emergency_stop.h  emergency_takeover.h  idle.h  manual.h
src/pub_sub_simulator_node/: pub_sub_simulator_node.cpp
src/pub_sub_simulator_node/header/: header.h
src/pub_sub_simulator_node/methods/: methods.cpp
src/pub_sub_simulator_node/states/: active.h  emergency_stop.h  emergency_takeover.h  idle.h  manual.h
src/supervisor_node/: supervisor_node.cpp
src/supervisor_node/header/: header.h
src/supervisor_node/methods/: methods.cpp
src/supervisor_node/states/: active.h  emergency_stop.h  emergency_takeover.h  idle.h  manual.h
