<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>supervisor_node</name>
  <version>0.0.0</version>
  <description>Supervisor Node for F1/Tenth</description>
  <maintainer email="271539@studenti.unimore.it">Luca Inghilterra</maintainer>
  <license>GNU GENERAL PUBLIC LICENSE</license>  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>yasmin</depend>
  <depend>yasmin_ros</depend>
  <depend>yasmin_viewer</depend>
  <depend>simple_node</depend>
  <depend>nav_msgs</depend>
  <depend>example_interfaces</depend>
  <depend>action_tutorials_interfaces</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

